tests/snapshots/snapshot__type_errors@equals_type_incorrect.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/equals_type_incorrect.roto
---
Error: Type error: mismatched types
   ╭─[ tests/scripts/type_errors/equals_type_incorrect.roto:2:13 ]
   │
 2 │     return (5 == "hello")
   │             ──────┬─────  
   │                   ╰─────── expected `Option[bool]`, found `bool`
───╯
